# tango

./: README.md  pyproject.toml  requirements.txt  tango.py
src/: ldapscan.py
tango/: ldapscan.py  tango.py
